--- a/index.html
+++ b/index.html
@@ -3,14 +3,252 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Portfolio</title>
-  <link rel="stylesheet" href="style.css"/>
+  <title>My Stylish Portfolio</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      line-height: 1.6;
+      background-color: #f0f2f5;
+    }
+
+    header {
+      background: linear-gradient(90deg, #0f2027, #203a43, #2c5364);
+      color: #fff;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      position: sticky;
+      top: 0;
+      z-index: 999;
+    }
+
+    .logo img {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    nav ul {
+      display: flex;
+      list-style: none;
+    }
+
+    nav ul li {
+      margin-left: 20px;
+    }
+
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+
+    nav ul li a:hover {
+      color: #00e6e6;
+    }
+
+    section {
+      padding: 80px 20px;
+      text-align: center;
+    }
+
+    h2 {
+      font-size: 2.5rem;
+      color: #2c3e50;
+      margin-bottom: 30px;
+    }
+
+    /* Home */
+    .home {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      gap: 30px;
+      background: linear-gradient(to right, #e0eafc, #cfdef3);
+    }
+
+    .home .text {
+      max-width: 500px;
+      text-align: left;
+    }
+
+    .home .text h1 {
+      font-size: 2.5rem;
+      color: #2c3e50;
+      margin-bottom: 20px;
+    }
+
+    .home .text p {
+      font-size: 1.1rem;
+      color: #444;
+    }
+
+    .home .image img {
+      width: 300px;
+      border-radius: 20px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+      transition: transform 0.4s;
+    }
+
+    .home .image img:hover {
+      transform: scale(1.05);
+    }
+
+    /* About */
+    .about p {
+      max-width: 700px;
+      margin: auto;
+      font-size: 1.1rem;
+      color: #555;
+    }
+
+    /* Services */
+    .services {
+      background: #f9f9f9;
+    }
+
+    .service-boxes {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      flex-wrap: wrap;
+      margin-top: 30px;
+    }
+
+    .service-boxes .box {
+      background: #fff;
+      padding: 25px;
+      border-radius: 15px;
+      width: 200px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: pointer;
+    }
+
+    .service-boxes .box:hover {
+      transform: translateY(-12px);
+      box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2);
+    }
+
+    .service-boxes .box img {
+      height: 70px;
+      margin-bottom: 15px;
+    }
+
+    .service-boxes .box p {
+      font-weight: 600;
+      color: #333;
+    }
+
+    /* Contact */
+    #contact {
+      background: linear-gradient(to right, #d3cce3, #e9e4f0);
+    }
+
+    .contact-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      max-width: 1000px;
+      margin: auto;
+      gap: 30px;
+    }
+
+    .contact-info,
+    .contact-form {
+      flex: 1 1 45%;
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
+    }
+
+    .contact-info h3 {
+      font-size: 1.5rem;
+      margin-bottom: 20px;
+      color: #2c3e50;
+    }
+
+    .contact-info p {
+      font-size: 1rem;
+      margin: 12px 0;
+      color: #555;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      width: 100%;
+      padding: 15px;
+      margin-bottom: 20px;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      transition: border-color 0.3s;
+    }
+
+    .contact-form input:focus,
+    .contact-form textarea:focus {
+      outline: none;
+      border-color: #8e2de2;
+    }
+
+    .contact-form button {
+      background: linear-gradient(to right, #8e2de2, #4a00e0);
+      color: white;
+      border: none;
+      padding: 14px 25px;
+      font-size: 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: transform 0.3s;
+    }
+
+    .contact-form button:hover {
+      transform: scale(1.05);
+    }
+
+    /* Footer */
+    footer {
+      background: #222;
+      color: white;
+      text-align: center;
+      padding: 15px 0;
+      font-size: 0.9rem;
+    }
+
+    @media (max-width: 768px) {
+      .contact-container {
+        flex-direction: column;
+      }
+      .home {
+        flex-direction: column;
+        text-align: center;
+      }
+      .home .text {
+        text-align: center;
+      }
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Navbar -->
+  <!-- Header -->
   <header>
-    <div class="logo"><img src="myphoto.jpg" alt=""></div>
+    <div class="logo"><img src="myphoto.jpg" alt="Logo"></div>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -21,69 +259,64 @@
     </nav>
   </header>
 
-  <!-- Home Section -->
+  <!-- Home -->
   <section id="home" class="home">
     <div class="text">
       <h1>Welcome to My Portfolio</h1>
-      <p>This is the home section introducing myself.</p>
-    </div><br><br><br><br><br>
+      <p>Hi! I'm Vikash Sharma, a B.Tech Computer Science student passionate about building beautiful and functional web experiences.</p>
+    </div>
     <div class="image">
       <img src="myphoto.jpg" alt="Profile Image">
     </div>
   </section>
 
-  <!-- About Section -->
+  <!-- About -->
   <section id="about" class="about">
     <h2>About Me</h2>
-    <p>I am a passionate web developer. Here are the details about me, including all my skills and background information.</p>
+    <p>I am a Computer Science Engineering student at GIFT College, specializing in full-stack development. Skilled in HTML, CSS, JavaScript, Python, Java, and modern frameworks like Bootstrap and Flask. I enjoy turning ideas into reality through clean code and responsive design.</p>
   </section>
 
-  <!-- Services Section -->
+  <!-- Services -->
   <section id="services" class="services">
     <h2>My Services</h2>
     <div class="service-boxes">
       <div class="box">
-        <img src="image.png"height="70px" alt="Service 1">
+        <img src="image.png" alt="Web Design">
         <p>Web Design</p>
       </div>
       <div class="box">
-        <img src="img2.jpg" height="70px"alt="Service 2">
+        <img src="img2.jpg" alt="Frontend Dev">
         <p>Frontend Development</p>
       </div>
       <div class="box">
-        <img src="img3.jpg"height="70px" alt="Service 3">
+        <img src="img3.jpg" alt="Backend Dev">
         <p>Backend Development</p>
       </div>
     </div>
   </section>
 
-  <section id="contact" class="contact">
-  <h2>Contact Me</h2>
-  <div class="contact-container">
-
-    <!-- Left Side: Contact Info -->
-    <div class="contact-info">
-      <h3>Get in Touch</h3>
-      <p><strong>📞 Phone:</strong> +91-9162973970</p>
-      <p><strong>📍 Address:</strong> siwan bihar India</p>
-      <p><strong>📫 Email:</strong> vsharma@email.com</p>
+  <!-- Contact -->
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <div class="contact-container">
+      <div class="contact-info">
+        <h3>Get in Touch</h3>
+        <p><strong>📞 Phone:</strong> +91-9162973970</p>
+        <p><strong>📍 Address:</strong> Siwan, Bihar, India</p>
+        <p><strong>📫 Email:</strong> vsharma@email.com</p>
+      </div>
+      <form class="contact-form">
+        <input type="text" placeholder="Your Name" required />
+        <input type="email" placeholder="Your Email" required />
+        <textarea placeholder="Your Message" rows="5" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
     </div>
-
-    <!-- Right Side: Contact Form -->
-    <form class="contact-form">
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <textarea placeholder="Your Message" rows="5" required></textarea>
-      <button type="submit">Send</button>
-    </form>
-
-  </div>
-</section>
-
+  </section>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Vikash Sharma all copyright claim</p>
+    <p>&copy; 2025 Vikash Sharma — All rights reserved.</p>
   </footer>
 
 </body>
